<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StepDetailFragment">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:background="@android:color/black"
        android:layout_height="@dimen/video_player_height">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exoplayer_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_player_height"
            android:contentDescription="@string/video_player"
            android:fitsSystemWindows="true"
            android:keepScreenOn="true"
            app:fastforward_increment="2000"
            app:rewind_increment="2000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_video_err"
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_player_height"
            android:textSize="16sp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/no_video_data" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout">

        <TextView
            android:id="@+id/tv_steps_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:layout_gravity="center" />
    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="64dp" />

    <Button
        android:id="@+id/btn_previous_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/previous"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:text="@string/next"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>